tests/core/faulty.sy
asdflökja;;;;
123
asd
// error: ;;;
// error: 123
